--- a/QtPlayground/MainWindow/presentation/view/MainWindow.qrc
+++ b/QtPlayground/MainWindow/presentation/view/MainWindow.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
-        <file>mainwindow.qml</file>
+        <file>MainWindow.qml</file>
+        <file>ConditionBar.qml</file>
+        <file>TaskBar.qml</file>
     </qresource>
 </RCC>
