connected control with protocol section model to update data

--- a/QtPlayground/MainWindow/presentation/view/MainWindow.qrc
+++ b/QtPlayground/MainWindow/presentation/view/MainWindow.qrc
@@ -3,5 +3,6 @@
         <file>MainWindow.qml</file>
         <file>ConditionBar.qml</file>
         <file>TaskBar.qml</file>
+	<file>ProtocolSectionListView.qml</file>
     </qresource>
 </RCC>
